Added bitbucket social icon, cleaned up config.

--- a/_config.yml
+++ b/_config.yml
@@ -1,26 +1,41 @@
-title: DigitalAdapt
-email: digitaladapt@gmail.com
-description: >- # this means to ignore newlines until "baseurl:"
-  I help raise my daughter and son. I take care for my wife. I also build websites.
-url: "https://digitaladapt.com" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: DigitalAdapt
-github_username:  digitaladapt
+# Base Settings
+title: Your awesome title
+author: Some User
+email: your-email@domain.com
+description:
+  Write an awesome description for your new site here. You can edit this
+  line in _config.yml. It will appear in your document head meta (for
+  Google search results) and in your feed.xml site description.
 
-# Build settings
+# Site URL
+url: "http://theme.digitaladapt.com"
+baseurl: /
+
+# Avatar, image location override, default /images/avatar.jpg
+# avatar: /images/avatar.jpg
+
+# Social Links
+rss: rss
+twitter_username: digitaladapt
+github_username:  digitaladapt
+bitbucket_username: digitaladapt
+# instagram_username: digitaladapt
+# dribbble_username: digitaladapt
+# facebook_username: digitaladapt
+# flickr_username: digitaladapt
+# linkedin_username: digitaladapt
+# pinterest_username: digitaladapt
+# youtube_username: digitaladapt
+# googleplus_username: +digitaladapt
+
+# Mastodon Instances
+# mastodon:
+# - username: digitaladapt
+#   instance: example.com
+
+# Build Settings
 destination: /var/www/theme/
-markdown: kramdown
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
 
-# Exclude from processing.
-# The following items will not be processed, by default. Create a custom list
-# to override the default setting.
-# exclude:
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
