Added optional "Contact Me About This Page" to footer.

--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,9 @@ baseurl: /
 matomo_url: "//stats.digitaladapt.com/"
 matomo_siteId: 2
 
+# Contact Me About This Page
+page_contact: false
+
 # Excerpts
 show_excerpts: true
 excerpt_separator: <!--more-->
