Added keybase icon.

--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,7 @@ rss: rss
 twitter_username: digitaladapt
 github_username:  digitaladapt
 bitbucket_username: digitaladapt
+keybase_username: digitaladapt
 # instagram_username: digitaladapt
 # dribbble_username: digitaladapt
 # facebook_username: digitaladapt
