--- a/_config.yml
+++ b/_config.yml
@@ -8,12 +8,12 @@ description:
   Google search results) and in your feed.xml site description.
 
 # Site URL
-url: "http://theme.digitaladapt.com"
+url: "https://digitaladapt.style"
 baseurl: /
 
 # Matomo Tracking
-matomo_url: "//stats.digitaladapt.com/"
-matomo_siteId: 2
+matomo_url: "//digitaladapt.click/"
+matomo_siteId: 1
 
 # Contact Me About This Page
 page_contact: false
