--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,9 @@ rss: rss
 twitter_username: digitaladapt
 github_username:  digitaladapt
 bitbucket_username: digitaladapt
+# "Copy ID" from user menu, may need to enable developer mode to see option
+discord_id_number: 570971366833127425
+discord_username: DigitalAdapt#8238
 keybase_username: digitaladapt
 # instagram_username: digitaladapt
 # dribbble_username: digitaladapt
