need variable as string

--- a/_config.yml
+++ b/_config.yml
@@ -35,8 +35,8 @@ twitter_username: digitaladapt
 github_username:  digitaladapt
 bitbucket_username: digitaladapt
 # "Copy ID" from user menu, may need to enable developer mode to see option
-discord_id_number: 570971366833127425
-discord_username: DigitalAdapt#8238
+discord_id_number: "570971366833127425"
+discord_username: "DigitalAdapt#8238"
 keybase_username: digitaladapt
 # instagram_username: digitaladapt
 # dribbble_username: digitaladapt
