added reddit icon

--- a/_config.yml
+++ b/_config.yml
@@ -45,6 +45,7 @@ twitter_username: digitaladapt
 # facebook_username: digitaladapt
 # flickr_username: digitaladapt
 # linkedin_username: digitaladapt
+# reddit_username: digitaladapt
 # pinterest_username: digitaladapt
 # youtube_username: digitaladapt
 # googleplus_username: +digitaladapt
