--- a/_config.yml
+++ b/_config.yml
@@ -33,8 +33,8 @@ excerpt_separator: <!--more-->
 
 # Social Links
 rss: rss
-twitter_username: digitaladapt
-#github_username:  digitaladapt
+#twitter_username: digitaladapt
+github_username:  digitaladapt
 #bitbucket_username: digitaladapt
 # "Copy ID" from user menu, may need to enable developer mode to see option
 #discord_id_number: "570971366833127425"
@@ -54,6 +54,11 @@ twitter_username: digitaladapt
 # mastodon:
 # - username: digitaladapt
 #   instance: example.com
+
+# custom additions to head/body
+# for example, this style will put the page heading on top of the banner image.
+#custom_head_html: '<style> header.major h1 { margin-top: -3em !important; position: relative; } </style>'
+#custom_body_html: '<script> console.log("you can add stuff here."); </script>'
 
 # Build Settings
 destination: public
