going back to default build directory of _site. updated readme, and prefixed the preview folder so it doesn't get deployed when building.

--- a/_config.yml
+++ b/_config.yml
@@ -61,7 +61,8 @@ github_username:  digitaladapt
 #custom_body_html: '<script> console.log("you can add stuff here."); </script>'
 
 # Build Settings
-destination: public
+# default destination is "_site"
+#destination: public
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
